# Tape

./: CMakeLists.txt  README.md  config.txt  input  main.cpp
src/: CMakeLists.txt  main.cpp
src/tapes/: tape.cpp  tape.h  tape_manager.h
src/tapes/file_tape/: file_tape.cpp  file_tape.h  file_tape_manager.cpp  file_tape_manager.h
tapes/: tape.cpp  tape.h
tapes/file_tape/: file_tape.cpp  file_tape.h  file_tape_manager.cpp  file_tape_manager.h
test1/: input
tests/: CMakeLists.txt  tests.cpp
tests/test1/: input
